tdf#97344 : Allow focus change using mouse in autofilter popup

Also modified CycleFocus() to skip controls that are
disabled.

Change-Id: I6d84e0d4aacc719b83c70e92a17f58f1756ff072
Reviewed-on: https://gerrit.libreoffice.org/21922
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>